[package]
name = "suggest"
description = "Suggest a commit based on your active changes"
version = "0.1.0"
edition = "2021"

[dependencies]
copypasta = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
spinners = "4.1.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
